<resources>
    <string name="app_name">Calculon</string>
    <string name="edit_res"></string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_dot">.</string>
    <string name="button_eq">=</string>
    <string name="button_div">/</string>
    <string name="button_mul">x</string>
    <string name="button_sub">-</string>
    <string name="button_add">+</string>
    <string name="button_clear">CLEAR</string>
    <string name="button_clearAll">CLEAR ALL</string>
    <string name="button_fun">f(x)</string>
    <string name="button_0_2">0</string>
    <string name="edit_res_2"></string>
    <string name="button_1_2">1</string>
    <string name="button_2_2">2</string>
    <string name="button_3_2">3</string>
    <string name="button_4_2">4</string>
    <string name="button_5_2">5</string>
    <string name="button_6_2">6</string>
    <string name="button_7_2">7</string>
    <string name="button_8_2">8</string>
    <string name="button_9_2">9</string>
    <string name="button_dot_2">.</string>
    <string name="button_eq_2">=</string>
    <string name="button_div_2">/</string>
    <string name="button_mul_2">x</string>
    <string name="button_sub_2">-</string>
    <string name="button_add_2">+</string>
    <string name="button_clear_2">CLEAR</string>
    <string name="button_clearAll_2">CLEAR ALL</string>
    <string name="button_fun_2">123</string>
    <string name="button_apx">^</string>
    <string name="button_exp">e</string>
    <string name="button_log">ln</string>
    <string name="button_tan">tan</string>
    <string name="button_cos">cos</string>
    <string name="button_sin">sin</string>
    <string name="button_log10">log</string>
    <string name="button_pi">π</string>
    <string name="button_rad">√</string>
</resources>
