<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <Button
        android:id="@+id/button45"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="16dp"
        android:onClick="onOpClickScientific"
        android:text="/"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button44"
        tools:text="@string/button_div_2" />

    <Button
        android:id="@+id/button44"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:onClick="onOpClickScientific"
        android:text="x"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button12"
        app:layout_constraintTop_toBottomOf="@+id/button43"
        tools:text="@string/button_mul_2" />

    <Button
        android:id="@+id/button43"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:onClick="onOpClickScientific"
        android:text="-"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button44"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button29"
        app:layout_constraintTop_toBottomOf="@+id/button42"
        tools:text="@string/button_sub_2" />

    <Button
        android:id="@+id/button42"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:onClick="onOpClickScientific"
        android:text="+"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button43"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button31"
        app:layout_constraintTop_toBottomOf="@+id/button41"
        tools:text="@string/button_add_2" />

    <Button
        android:id="@+id/button41"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:onClick="onMathfunClickScientific"
        android:text="log"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button42"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button35"
        app:layout_constraintTop_toBottomOf="@+id/button_fun2"
        tools:text="@string/button_log10" />

    <Button
        android:id="@+id/button_fun2"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:text="123"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button40"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="@string/button_fun_2" />

    <Button
        android:id="@+id/button39"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="9dp"
        android:onClick="onClearAllClickScientific"
        android:text="CLEAR ALL"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="@string/button_clearAll_2" />

    <Button
        android:id="@+id/button40"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="9dp"
        android:onClick="onClearClickScientific"
        android:text="CLEAR"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/button_fun2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button39"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="@string/button_clear_2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="106dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text=""
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/edit_res_2" />

    <Button
        android:id="@+id/button35"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:onClick="onMathfunClickScientific"
        android:text="ln"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button41"
        app:layout_constraintEnd_toStartOf="@+id/button41"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button38"
        tools:text="@string/button_log" />

    <Button
        android:id="@+id/button36"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:onClick="onMathfunClickScientific"
        android:text="sin"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button37"
        app:layout_constraintEnd_toStartOf="@+id/button37"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/button_sin" />

    <Button
        android:id="@+id/button37"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:onClick="onMathfunClickScientific"
        android:text="cos"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button38"
        app:layout_constraintEnd_toStartOf="@+id/button38"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button36"
        tools:text="@string/button_cos" />

    <Button
        android:id="@+id/button38"
        android:layout_width="70.4dp"
        android:layout_height="60dp"
        android:onClick="onMathfunClickScientific"
        android:text="tan"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button35"
        app:layout_constraintEnd_toStartOf="@+id/button35"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button37"
        tools:text="@string/button_tan" />

    <Button
        android:id="@+id/button31"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:onClick="onOpClickScientific"
        android:text="^"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button42"
        app:layout_constraintEnd_toStartOf="@+id/button42"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button32"
        tools:text="@string/button_apx" />

    <Button
        android:id="@+id/button32"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:onClick="onSqrtClickScientific"
        android:text="√"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button31"
        app:layout_constraintEnd_toStartOf="@+id/button31"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button33"
        tools:text="@string/button_rad" />

    <Button
        android:id="@+id/button33"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:onClick="onNumberClickScientific"
        android:text="π"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button32"
        app:layout_constraintEnd_toStartOf="@+id/button32"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button34"
        tools:text="@string/button_pi" />

    <Button
        android:id="@+id/button34"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:onClick="onNumberClickScientific"
        android:text="e"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button33"
        app:layout_constraintEnd_toStartOf="@+id/button33"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/button_exp" />

    <Button
        android:id="@+id/button29"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:onClick="onNumberClickScientific"
        android:text="9"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button43"
        app:layout_constraintBottom_toTopOf="@+id/button12"
        app:layout_constraintEnd_toStartOf="@+id/button43"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button30"
        app:layout_constraintTop_toBottomOf="@+id/button31"
        tools:text="@string/button_9_2" />

    <Button
        android:id="@+id/button30"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:onClick="onNumberClickScientific"
        android:text="8"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button29"
        app:layout_constraintEnd_toStartOf="@+id/button29"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button9"
        tools:text="@string/button_8_2" />

    <Button
        android:id="@+id/button28"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:onClick="onNumberClickScientific"
        android:text="2"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button13"
        app:layout_constraintEnd_toStartOf="@+id/button13"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/button_2_2" />

    <Button
        android:id="@+id/button13"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:onClick="onNumberClickScientific"
        android:text="3"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button11"
        app:layout_constraintEnd_toStartOf="@+id/button11"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button28"
        tools:text="@string/button_3_2" />

    <Button
        android:id="@+id/button12"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:onClick="onNumberClickScientific"
        android:text="5"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button44"
        app:layout_constraintEnd_toStartOf="@+id/button44"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button11"
        tools:text="@string/button_5_2" />

    <Button
        android:id="@+id/button11"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:onClick="onNumberClickScientific"
        android:text="4"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button12"
        app:layout_constraintEnd_toStartOf="@+id/button12"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button13"
        tools:text="@string/button_4_2" />

    <Button
        android:id="@+id/button10"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:onClick="onNumberClickScientific"
        android:text="6"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/button_6_2" />

    <Button
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:onClick="onNumberClickScientific"
        android:text="7"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button30"
        app:layout_constraintEnd_toStartOf="@+id/button30"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button10"
        tools:text="@string/button_7_2" />

    <Button
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:onClick="onNumberClickScientific"
        android:text="1"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button45"
        app:layout_constraintEnd_toStartOf="@+id/button45"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button7"
        tools:text="@string/button_1_2" />

    <Button
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:onClick="onNumberClickScientific"
        android:text="0"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button6"
        tools:text="@string/button_0_2" />

    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:onClick="onDotClickScientific"
        android:text="."
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        tools:text="@string/button_dot_2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:onClick="onEqualClickScientific"
        android:text="="
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/button_eq_2" />
</android.support.constraint.ConstraintLayout>